FE: Fix phase banner layout on smaller screens

--- a/cla_public/static-src/stylesheets/_phase-banner.scss
+++ b/cla_public/static-src/stylesheets/_phase-banner.scss
@@ -5,7 +5,7 @@
   span {
     @include media(mobile) {
       margin-top: 8px;
-      width: auto;
+      display: block;
     }
   }
 
